      2.5 times faster (from 10 seconds to 4 seconds).

  o Build Changes:
    * The PythonSetup build action no longer provides the older
      --single-version-externally-managed argument, and instead
      provides the --prefix, --install-purelib, and --install-platlib
      arguments.  This allows it to work correctly with a greater
      number of packages. (CNY-809)

  o Bug Fixes:
    * "conary rq" (with no arguments) no longer hides troves if the
      flavor that matches the system flavor is not built for the
      latest version. (CNY-784)
    * "cvc cook" now displays the correct label of the thing its
      building, even when it is not the build label.
    * Calling "cvc update" on a new package will fail with an
      appropriate error message instead of displaying a
      traceback. (CNY-715)
    * Conary can now update a file from a non-directory to a directory.

Changes in 1.0.29:
  o Bug Fixes:
    * Conary now removes sources from the lookaside before unpacking SRPMs to
      ensure that the source referenced from the SRPM is actually contained in
      the SRPM. (CNY-771)
    * Errors found in the recipe while checking in will now display file name
      and line number information along with the error found.
    * The trove browser no longer shows duplicate entries for multihomed
      repositories.
    * A bug that kept sqlite-based 64-bit mirrors from being used as a source 
      for further mirrors has been fixed.

  o Build Changes:
    * Conary no longer prints policy error messages three times; it
      now prints each error immediately when it is found, and then
      summarizes all policy errors once (instead of twice) at the
      end of the build process. (CNY-776)

Changes in 1.0.28:
  o Client Changes:
    * Migrate no longer replaces by default as if --replace-files was
      specified. (CNY-769)

  o Server Changes:
    * The log retrieval function now returns a HTTP_NOT_IMPLEMENTED